# linguistic-assistant

./: .gitignore  AGENTS.md  README.md
research/: .gitignore  Polygloss_integration.md  README.md  gip-alignment-robustness.md  gip-evaluation-calibration.md  gip-feature-projection.md  gip-phonology-induction.md  gip-typological-priors.md  glosses-improvement-plan.md  harness_research.md  learning_paradigms_plan.md  liblcm.py  pyproject.toml
research/addons/audio/: README.md  allosaurus.py  candidates.py  catalog.py  contract.py  features.py  playback.py  promotion.py  run.py  sources.py  tests_smoke.py
research/addons/bilingual/: bidix.py  crosswalk.py  fixtures.py  flextrans.py  qa.py  sense_links.py  stream.py  tests_smoke.py
research/align/: README.md  __init__.py  aligner.py  backends.py  class_key.py  contract.py  cooccur.py  eflomal_vs_hmm.md  fixtures.py  glosses.py  morph_align_hc.py  run_paradigm_study.py  segment_en.py  silver_gold.py  table_modes.py  tests_morph_align_hc.py  tests_smoke.py  thot-on-morphs-report.md  thot-on-morphs.md  to_bilingual.py
research/assess/: README.md  __init__.py  assess.py  builders.py  inventory.py  mdl.py  metrics.py  scorecard.py  tests_smoke.py  worst_part.py
research/audio/: README.md  __init__.py  candidates.py  contract.py  features.py  promotion.py  reports.py  run.py  samples.py  tests_smoke.py
research/benchmarks/: README.md
research/benchmarks/linggym/: ab.py  (+6 more)
research/bilingual/: README.md  __init__.py  finder.py  tests_smoke.py
research/corpus/: __init__.py
research/cycle/: README.md  __init__.py  accumulate.py  glossing.py  gold.py  llm_propose.py  morph_align.py  phonology.py  tdd.py  tests_hc.py  tests_morph.py  tests_smoke.py
research/data_prep/: README.md
research/deferrals/: README.md  assess.py  build.py  counterfactual.py  discover.py  edits.py  enrich.py  eval_gemma.py  llm.py  pipeline.py  profile.py  render.py  schema.py  select.py  store.py  taxonomy.py  tests_smoke.py  validation.py
research/deltas/: apply.py  build_store.py  emit.py  store.py  tests_smoke.py
research/docs/: from-scratch-8lang-status.md  remaining-work.md  review-ui-plan.md
research/engine/: README.md  ablate.py  hc.py  hc_collapse.py  igt.py  instances.py  lift_emit.py  scorer.py  tests_glide_live.py  tests_hc_collapse.py
research/eval/: README.md  __init__.py  fixtures.py  instances.py  progress.py  report.py  run.py  runner.py  stub_scorer.py  tests_smoke.py
research/gold/: README.md  __init__.py  align_gloss.py  bootstrap.py  build.py  compile.py  completeness.py  evaluate.py  goldio.py  hc_coverage.py  hc_validate.py  inflection.py  lift.py  morphology.py  orthography.py  phonology_gold.py  phonology_induce.py  propose.py  segment.py  sense_pick.py  sources.py  tests_smoke.py
research/golden/: PLAN.md  README.md  __init__.py  _safe_chars.txt  build.py  grammar.py  hc.py  igt.py  instances.py  score.py  scorer.py
research/golden_sets/: README.md
research/harness/: anthropic_client.py  base.py  config.py  mock.py  openai_compat.py  registry.py
research/induce/: README.md  accumulate.py  cotrain.py  glossing.py  gold.py  hc_phonology.py  llm_propose.py  morph_align.py  phonology.py  pos.py  tdd.py  tests_accumulate.py  tests_cotrain.py  tests_hc.py  tests_morph.py  tests_smoke.py
research/models/: README.md
research/parsegym/: assess.py  curate.py  schema.py  tests_smoke.py
research/proposal/: README.md  __init__.py  change_set.py  context.py  contract.py  propose.py
research/propose/: README.md  change_set.py  context.py  grammar.py  propose.py
research/review/: affix_function.py  affixes.py  agreement.py  allomorph.py  classes.py  constraints.py  dossier.py  exceptions.py  explore.py  frontier.py  judge.py  langknow.py  opus_review.py  project.py  promote.py  recover.py  reduplication.py  reviewer_query.py  tests_affix_function.py  tests_agreement.py  tests_allomorph.py  tests_classes.py  tests_constraints.py  tests_exceptions.py  tests_explore.py  tests_frontier.py  tests_opus_review.py  tests_project.py  tests_promote.py  tests_recover.py  tests_reduplication.py  tests_reviewer_query.py  wordvec.py
research/scripts/: smoke_test.py
research/skills/: README.md  affix_function.md  generate_constraint.md  gloss_reference.md  package_builder.md  parsegym_resolve.md  promote_rule.md  propose_rule.md  resolve_deferral.md  sense_pick.md
(+475 files in other folders)
