[project]
name = "linguistic-assistant-research"
version = "0.0.1"
description = "Provider-agnostic LLM harness and benchmarks for word-level morphology/phonology."
requires-python = ">=3.10,<3.14"  # upper bound for sil-machine
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Installed only on the Windows box that extracts gold data from a real FLEx project.
# flexlibs is Windows-only and needs a FieldWorks install — keep it out of the core loop.
data-prep = [
    "flexlibs>=1.2",
]
# Statistical word-alignment (a second, probabilistic source of word glosses alongside the
# deterministic Apertium bidix). `sil-machine[thot]` is cross-platform (THOT: IBM1/HMM/fast_align);
# `eflomal` is Linux-only (CPU, no GPU) — on Windows use WSL or fall back to THOT. Deliberately NO
# torch/transformers/GPU extras. See research/align/.
align = [
    # [thot] = cross-platform aligners (fast_align/IBM1/HMM); [jobs] = the EflomalAligner wrapper +
    # its deps (clearml/dynaconf) — machine.jobs.eflomal_aligner imports clearml, so [thot] alone
    # leaves eflomal "unavailable" even with the eflomal package installed.
    "sil-machine[thot,jobs]>=1.8",
    "eflomal>=2.0; sys_platform == 'linux'",  # the native aligner ([jobs] also pulls it on Linux)
]
# Optional audio evidence add-on; not part of the default loop.
audio = [
    "allosaurus>=1.0",
    "faster-whisper>=1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]
