[project]
name = "linguistic-assistant-research"
version = "0.0.1"
description = "Provider-agnostic LLM harness and benchmarks for word-level morphology/phonology."
requires-python = ">=3.10,<3.14"  # upper bound for sil-machine
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Installed only on the Windows box that extracts gold data from a real FLEx project.
# flexlibs is Windows-only and needs a FieldWorks install — keep it out of the core loop.
data-prep = [
    "flexlibs>=1.2",
]
# Statistical word-alignment (a second, probabilistic source of word glosses alongside the
# deterministic Apertium bidix). `sil-machine[thot]` is cross-platform (Windows/macOS/Linux, CPU):
# we use its THOT HMM aligner. Deliberately NO torch/transformers/GPU extras. See research/align/.
align = [
    "sil-machine[thot]>=1.8",
]
# Optional audio evidence add-on; not part of the default loop.
audio = [
    "allosaurus>=1.0",
    "faster-whisper>=1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["propose*", "engine*", "gold*", "align*", "assess*", "review*", "induce*", "corpus*", "eval*", "addons*"]

[tool.pytest.ini_options]
# This repo names tests `tests_*.py` (not the pytest default `test_*.py`), so collection needs this or
# `pytest` silently finds nothing. With it set, plain `pytest review/ induce/ align/` just works.
python_files = ["tests_*.py", "test_*.py"]
python_functions = ["test_*"]
